<resources>
    <string name="app_name">Vamz_sem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="title_holder">title holder</string>
    <string name="director_holder" />
    <string name="image_detail">image_detail</string>
    <string name="writers_holder" />
    <string name="cast_holder" />
    <string name="back_icon" />
    <string name="mylist">MyList</string>
    <string name="no_results">No Results</string>
    <string name="filter_menu">Filter menu</string>
    <string name="search_button">Search Button</string>
    <string name="channel_name">Film Notification</string>
    <string name="channel_description">Film notification channel</string>
    <string name="genre_filter">Genre filter</string>
    <string name="director">Director:</string>
    <string name="writers">Writers:</string>
    <string name="cast">Cast:</string>
    <string name="genre">Genre:</string>
    <string name="language">Language:</string>
    <string name="country">Country:</string>
    <string name="plot">Plot:</string>
</resources>