<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".filmy.FilmyDetailActivity">


        <ImageButton
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:background="@color/background"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_icon"
            android:src="@drawable/icon_back"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true" />

        <ImageView
            android:id="@+id/image_detail_id"
            android:layout_width="wrap_content"
            android:layout_height="285dp"
            android:contentDescription="@string/image_detail"
            android:maxWidth="190dp"
            android:maxHeight="250dp"
            android:src="@drawable/avatar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_line" />

        <View
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_icon" />

        <TextView
            android:id="@+id/title_detail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:lines="2"
            android:text="@string/title_holder"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_detail_id" />

        <TextView
            android:id="@+id/director_detail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:lines="2"
            android:text="@string/director_holder"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_detail_id" />

        <TextView
            android:id="@+id/writers_detail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:lines="3"
            android:text="@string/writers_holder"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/director_detail_id" />

        <TextView
            android:id="@+id/cast_detail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:lines="5"
            android:text="@string/cast_holder"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/writers_detail_id" />

        <TextView
            android:id="@+id/plot_detail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:lines="15"
            android:text="@string/cast_holder"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast_detail_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

